Use flex align and flex-start to prevent stretching of advertisement and main content divs.

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
 
 .page-wrap {
   display: flex;
+  align-items: flex-start;
   margin-top: 60px;
   width: 100%;
   max-width: 990px; }
@@ -63,7 +64,9 @@ body {
   background-color: #D5A6BD;
   margin-left: 10px;
   margin-bottom: 10px;
-  border: 1px solid black; }
+  border: 1px solid black;
+  padding-top: 20px;
+  padding-bottom: 20px; }
   .advertisement-wrapper h1 {
     font-size: 15px;
     font-weight: bold;
@@ -83,6 +86,7 @@ body {
   display: flex;
   flex: 3;
   flex-wrap: wrap;
+  align-items: flex-start;
   align-content: flex-start;
   margin-left: 10px;
   margin-right: 5px; }
