--- a/styles.css.scss
+++ b/styles.css.scss
@@ -24,6 +24,7 @@ body {
 
 .page-wrap {
   display: flex;
+  align-items: flex-start;
   margin-top: 60px;
   width: 100%;
   max-width: 990px;
@@ -40,6 +41,8 @@ body {
   margin-left: 10px;
   margin-bottom: 10px;
   border: 1px solid black;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   h1 {
     font-size: 15px;
@@ -66,6 +69,7 @@ body {
   display: flex;
   flex: 3;
   flex-wrap: wrap;
+  align-items: flex-start;
   align-content: flex-start;
   margin-left: 10px;
   margin-right: 5px;
